--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rest-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@prisma/client": "^3.1.1",
-    "express": "^4.17.1"
+    "cross-fetch": "^3.1.4",
+    "express": "^4.17.1",
+    "node-fetch": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
