add client side

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,3 +1,6 @@
 
 run_psql_docker:
-	$ docker run --name github-psql -t dev -e POSTGRES_PASSWORD=1234 -d postgres
+	docker run --name github-psql -e POSTGRES_PASSWORD=1234 -d postgres
+
+build:
+	docker build -t search-github:dev -f Dockerfile .
