--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.1.1",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.1.4",
     "express": "^4.17.1",
     "node-fetch": "^3.1.0"
