--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "expo": "~43.0.2",
+    "expo-linking": "^2.4.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-config": "^1.4.5",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
